--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles.css') }}" />
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='icon.png') }}" />
+    <link rel="stylesheet" type="text/css" href="G:\My Drive\NTHU\112s1\ML\final project\bedtime_story_generator\static\styles.css" />
+    <link rel="icon" type="image/x-icon" href="G:\My Drive\NTHU\112s1\ML\final project\bedtime_story_generator\static\icon.png" />
     <title>Text Generation App</title>
 </head>
 <body>
